k8s/deployment.yaml
# Se usa mi imagen de ACR y 2 réplicas.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-django
spec:
  replicas: 1 #Se pone uno para evitar mayor gasto de dinero, pero se puede poner el 2.
  selector:
    matchLabels:
      app: devops-django
  template:
    metadata:
      labels:
        app: devops-django
    spec:
      containers:
        - name: django
          image: devopsregistryhenry.azurecr.io/devops-django:latest
          ports:
            - containerPort: 8000
