k8s/ingress.yaml
# Se usa NGINX Ingress Controller para rutear el trafico del servicio.
# Se expone publcaicamente sin TLS. No hay plata.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-django-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: devops-django-service
                port:
                  number: 8000
